# timmyfin

./: README.md  config.yml.example  pyproject.toml
jfmusicbot/: botsetup.py
