[tool.poetry]
name = "timmyfin"
version = "0.1.0"
description = "Fork of jfmusicbot: A jellyfin music bot for discord "
authors = ["felix920506 <felix920506@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = {extras = ["voice"], version = "^2.6.1"}
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
